--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -127,6 +127,86 @@
     height: 70px;
 }
 
+/*inicio detalhe do pokemon*/
+.pokemonListDetail{
+    
+        display: block;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    
+}
+.pokemonDetail  {
+    display: block;
+    flex-direction: row;
+    margin: .5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    
+}
+.pokemonDetail li{
+    float: left;
+   
+}
+
+.pokemonDetail .number {
+    color: #000;
+    opacity: .3;
+    text-align: right;
+    font-size: 0.625rem;
+}
+
+.pokemonDetail .name {
+    text-transform: capitalize;
+    font-size: 1.925rem;
+    color: #fff;
+    margin-bottom: .25rem;
+    
+}
+
+.pokemonDetail .detail {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+}
+
+.pokemonDetail .detail .types {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+   
+}
+
+
+.pokemonDetail .detail .types .type {
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+    filter: brightness(1.1);
+    text-align: center;
+}
+
+.pokemonDetail .detail img {
+    max-width: 100%;
+    height: 170px;
+}
+.descrition {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    margin: 0rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    
+}
+hr {
+    width: 100%;
+}
+/*fim do detalhe do pokemon*/
+
 .pagination {
     display: flex;
     flex-direction: row;
